2001-05-14  Jody Goldberg <jgoldberg@home.com>

	* src/expr.c (cellref_boundingbox) : new function.
	(expr_tree_boundingbox) : implement.

2001-05-14  Almer S. Tigelaar  <almer@gnome.org>

	* src/colrow.c (rows_height_update): Add shrink flag.
	(cb_autofit_height_no_shrink): Callback function for new
	autofit without shrinking functionality.

	* src/commands.c (cmd_paste_cut_redo): Adjust for change
	to rows_height_update.
	(cmd_paste_copy_undo): Idem.
	(cmd_autoformat_undo): Idem.
	(cmd_format_undo): Idem.

	* src/clipboard.c (clipboard_paste_region): Idem.

	* src/sheet.c (sheet_clear_region): Idem.
	(sheet_apply_style): Idem.

2001-05-14  Almer S. Tigelaar  <almer@gnome.org>

	* src/commands.c (cmd_paste_copy_impl): New, contains
	what was previously in cmd_paste_copy_undo.
	(cmd_paste_copy_undo): Call upon cmd_paste_copy_impl.
	(cmd_paste_copy_redo): Idem.
	(cmd_paste_copy): Remove initialization of me->is_undo flag,
	the flag has been burned.

2001-05-14  Almer S. Tigelaar  <almer@gnome.org>

	* configure.in: Bump GAL version requirement to 0.7.99.5
	
  	* src/workbook-format-toolbar.c (cb_back_color_changed): Add
  	by_user flag handling and sync the combo's on all other views
 	if the color changes.
  	(cb_fore_color_changed): Idem.
  	(workbook_create_format_toolbar): Pass workbook view's to
  	color_group_fetch and sync the colors of the back and fore combo's
 	with the other views on creation.

2001-05-14  Miguel de Icaza  <miguel@ximian.com>

	* src/sheet-control-gui.c: Removed support routines that used the
	Excel-like toolbar.  I got fed up with it. 
	(scg_construct): Use regular Gtk scrollbars.  Connect to value
	changed to reflect the state of the scrollbar on the spreadsheet
	inmediately instead of doing the broken Excel behaviour.
	That is one feature I cloned that was totally idiotic.

2001-05-13  Almer S. Tigelaar  <almer@gnome.org>

	* src/workbook-control-gui.c (wbcg_error_splits_array):
	Resolve warning.
